src/test/ui/nll/user-annotations/method-ufcs-inherent-3.stderr
error[E0597]: `v` does not live long enough
  --> $DIR/method-ufcs-inherent-3.rs:14:26
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
LL |     let v = 22;
LL |     let x = <A<'a>>::new(&v, 22);
   |             ------------ ^^ borrowed value does not live long enough
   |             |
   |             type annotation requires that `v` is borrowed for `'a`
LL |
LL | }
   | - `v` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/method-ufcs-inherent-3.rs:14:13
   |
LL |     let x = <A<'a>>::new(&v, 22);
   |             ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
